clean clean clean

--- a/notebooks/Part 2.2.1. Curation of model - False positive gene knockouts.ipynb
+++ b/notebooks/Part 2.2.1. Curation of model - False positive gene knockouts.ipynb
@@ -2564,7 +2564,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.remove_reaction('R_MNLDHr')"
+    "model.remove_reaction()"
    ]
   },
   {
@@ -3235,9 +3235,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "RecAndAn",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "recandan"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3249,7 +3249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
